src/styles/Project.module.css
.hr {
    display: none;
}

.soldOutText {
    color: red;
    text-decoration: underline;
}

.projectBox {
    width: 300px;
    margin: 30px;
    text-align: justify;
}

.projectBox h1 {
    color: var(--white);
    text-align: center;
}

.projectImageWrapper img {
    object-fit: contain;
    position: relative;
}

.projectImageWrapper {
    width: 300px;
    height: 300px;
    position: relative;
    margin: 10px;
}


.projectDescription p {
    letter-spacing: .5px;
    margin-bottom: 20px;
}


/* Mobile */
@media (max-width: 700px) {

    .projectBox {
        text-align: center;
        width: 300px;
        margin: auto;
    }

    .projectBox p {
        text-align: justify;
        font-size: small;
        margin-bottom: 10px;
    }

    .projectBox:first-child {
        padding: 50px 0;
    }

    .projectBox:not(:first-child) {
        padding: 50px 0;
    }

    .projectDescription {
        margin-bottom: 100px;
    }

    .projectImageWrapper {
        
        margin: auto;
        position: relative;
        width: 300px;
        height: 300px;
    }

    .projectImageWrapper img {
        padding: 20px;
    }

    .hr {
        display: block;
        width: 50%;
        border-color: var(--white);
        margin: auto;
    }

}

/* Tablets */

@media (min-width: 701px) and (max-width: 1120px) {

    .projectIntro, .projectOutro {
        width: 500px;
    }

    .projectBox {
    width: 100%;
    }

    .projectBox h1 {
        font-size: 3em;
    }

    .projectBox:not(:first-child) {
        padding: 75px 0;
    }

    .projectImageWrapper {
        position: relative;
        width: 300px;
        height: 300px;
        margin: 30px auto;
    }

    .projectDescription {
        margin-bottom: 100px;
        text-align: justify;
        font-size: large;
    }
    

    .projectDescription p {
        margin-bottom: 30px;
    }

    .hr {
        display: block;
        color: var(--white);
    }

    @keyframes projectSlide {
        0%   {left: -400px; top: 0px;}
        25%  {left: 0px; top: 0px;}
      }

}

